name:                pure-mutation
version:             0.8.0.0
homepage:            purehs.org/doc/pure-mutation
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-mutation.git

library
  build-depends:
    base, 
    pure, 
    pure-lifted, 
    pure-json, 
    pure-prop

  if impl(ghcjs)
    build-depends: ghcjs-base

  hs-source-dirs: src

  exposed-modules:
    Pure.Mutation

  default-language: Haskell2010
